compiler/testdata/errors/unclosed_function.lua
function p(x)
	print(x)
-- end is missing
